--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,11 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-dark: #111111;
+  --color-grey: #555555;
+  --font-oswald: var(--font-oswald);
+  --font-raleway: var(--font-raleway);
+  --font-rozha: var(--font-rozha);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +26,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.interview{
+  background-image: url(../public/src/interview/bg.png);
 }
